--- a/partials/author.hbs
+++ b/partials/author.hbs
@@ -1,4 +1,5 @@
 {{#foreach authors}}
+    <!-- Disable Author names. Only one author!
     <section class="author u-shadow">
         <div class="author-image-placeholder u-placeholder">
             <img class="author-image lazyload u-object-fit"
@@ -38,4 +39,5 @@
             {{/if}}
         </div>
     </section>
+    -->
 {{/foreach}}
