--- a/post.hbs
+++ b/post.hbs
@@ -2,14 +2,15 @@
 
 <div class="container">
     <div class="row">
-        <div class="content-column col-lg-6">
+        <div class="content-column col-lg-9">
             <div class="content-area">
                 <main class="site-main">
                     {{#post}}
                         <article
                             class="{{post_class}}{{#unless feature_image}} no-image{{/unless}} single u-shadow">
                             {{> post-header tag="h1" hide_link=true}}
-                            <div class="post-meta">
+                            <!-- Hide post date!
+                                <div class="post-meta">
                                 <time class="post-meta-date"
                                     datetime="{{date format="YYYY-MM-DD"}}">
                                     {{date published_at}}
@@ -17,6 +18,7 @@
                                 <span
                                     class="post-meta-length">{{reading_time}}</span>
                             </div>
+                            -->
                             {{> post-media}}
                             <div class="post-wrapper">
                                 <div class="post-content u-text-format">
@@ -35,9 +37,6 @@
         </div>
         <div class="related-column col-lg-3 hidden-xs hidden-sm hidden-md">
             {{> related}}
-        </div>
-        <div class="sidebar-column col-lg-3 hidden-xs hidden-sm hidden-md">
-            {{> widgets/widgets}}
         </div>
     </div>
 </div>
