--- a/default.hbs
+++ b/default.hbs
@@ -4,6 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
+    <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed-152.png" />
+    <link rel="manifest" href="pi.webmanifest">
     <title>{{meta_title}}</title>
     <link rel="stylesheet" href="{{asset "built/screen.css"}}">
     <link rel="stylesheet"
