Corrects the footer for ownership and credits
Signed-off-by: Piyush Itankar <pitankar@gmail.com>

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="footer-inner">
             <div class="copyright">
-                <a href="https://itankar.com/about/" target="_blank">Piyush Itankar</a> &#169 2021. Powered by <a href="https://ghost.org/" target="_blank">Ghost</a>
+                <a href="https://itankar.com/about/" target="_blank"><b>Piyush Itankar</b></a> &#169 2021. 
+                Powered by <a href="https://ghost.org/" target="_blank"><b>Ghost</b></a> 
+                and <a href="https://github.com/pitankar/Ruby" target="_blank"><b>Ruby</b></a> theme.
             </div>
         </div>
     </div>
