--- a/partials/logo.hbs
+++ b/partials/logo.hbs
@@ -2,6 +2,6 @@
     {{#if @site.logo}}
         <img class="logo-image" src="{{@site.logo}}" alt="{{@site.title}}">
     {{else}}
-        <span class="logo-text">{{@site.title}}</span>
+        <span class="logo-text">❯ {{@site.title}}<b class="flash">_</b></span>
     {{/if}}
 </a>
