--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,9 +2,14 @@
     <div class="container">
         <div class="footer-inner">
             <div class="copyright">
-                <a href="https://itankar.com/about/" target="_blank"><b>Piyush Itankar</b></a> &#169 2021. 
-                Powered by <a href="https://ghost.org/" target="_blank"><b>Ghost</b></a> 
-                and <a href="https://github.com/pitankar/Ruby" target="_blank"><b>Ruby</b></a> theme.
+                <a href="https://itankar.com/about/" target="_blank" style="text-decoration:none"><b>Piyush Itankar</b></a> &#169 2021. 
+                Powered by <a href="https://ghost.org/" target="_blank" style="text-decoration:none"><b>Ghost</b></a> 
+                and <a href="https://github.com/pitankar/Ruby" target="_blank" style="text-decoration:none"><b>Ruby</b></a> theme.
+                <br/>
+                Consider donating to help keep the blog going -
+                <br/>
+                <button ><a href="https://buy.stripe.com/00gcPVcXhblZ8hO147" target="_blank" style="text-decoration:none">$5</a></button>
+                <button ><a href="https://buy.stripe.com/4gw6rxg9tahVeGcdQU" target="_blank" style="text-decoration:none">$10</a></button></b>
             </div>
         </div>
     </div>
