--- a/assets/css/blog/author.css
+++ b/assets/css/blog/author.css
@@ -3,6 +3,7 @@
     margin-top: 30px;
     padding: 30px 20px;
     background-color: var(--white-color);
+    border-radius: 10px;
 }
 
 .author-image-placeholder {
