--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -9,8 +9,8 @@
     --black-color: #000;
     --font-base: "Open Sans", sans-serif;
     --font-alt: dosis, sans-serif;
-    --animation-base: ease-in-out;
-    --shadow-base: 0 0 5px rgba(0, 0, 0, 0.05);
+    --animation-base: cubic-bezier(0.42, 0.0, 0.58, 1.0);
+    --shadow-base: 0 0 3px rgb(0 0 0 / 10%);
 }
 
 html {
@@ -31,7 +31,7 @@ body {
     text-rendering: optimizeLegibility;
     word-break: break-word;
     background-color: var(--light-gray-color);
-    background-color: #f9f9f9;
+    background-color: #fCfCfC;
     transition: background-color 0.1s var(--animation-base);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -104,8 +104,18 @@ figcaption {
 }
 
 pre {
-    overflow-x: scroll;
-    margin: 30px 0;
+    overflow: auto;
+    margin: 1.6em 0;
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #d7dfe3;
+    border-radius: 3px;
+    white-space: pre;
+    font-family: Consolas,Liberation Mono,Menlo,Courier,monospace;
+    font-size: .9em;
+    word-wrap: break-word;
+    background-color: #f5f7f8;
+    white-space: pre-wrap;
 }
 
 hr {
@@ -134,4 +144,14 @@ hr::before {
 
 hr::after {
     left: 20px;
+}
+
+mark {
+    background-color: #ffffd6;
+    border-radius: 5px;
+    padding-left: 4px;
+    padding-right: 4px;
+    border-style: solid;
+    border-width: thin;
+    border-color: #fff900;
 }
