--- a/partials/author.hbs
+++ b/partials/author.hbs
@@ -13,7 +13,7 @@
                     <div class="author-social">
                         {{#if website}}
                             <a class="author-social-item author-website"
-                                href="{{website}}" target="_blank">Website</a>
+                                href="{{website}}" target="_blank">Linkedin</a>
                         {{/if}}
                         {{#if facebook}}
                             <a class="author-social-item author-facebook"
@@ -25,8 +25,7 @@
                                 href="https://twitter.com/{{twitter}}"
                                 target="_blank">Twitter</a>
                         {{/if}}
-                        <a class="author-social-item author-more"
-                            href={{url}}>More posts</a>
+                        <a class="author-social-item author-more" href={{url}}>More posts</a>
                     </div>
                 </div>
             </header>
