--- a/post.hbs
+++ b/post.hbs
@@ -7,7 +7,7 @@
                 <main class="site-main">
                     {{#post}}
                         <article
-                            class="{{post_class}}{{#unless feature_image}} no-image{{/unless}} u-shadow single">
+                            class="{{post_class}}{{#unless feature_image}} no-image{{/unless}} single blog-post">
                             {{> post-header tag="h1" hide_link=true}}
                                 <div class="post-meta">
                                 <time class="post-meta-date"
